# tessera

./: .env.example  .gitignore  =2.3  =2.7  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOG.md  Makefile  README.md  VISION.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: results.md
examples/: banking77_classification.py  docred_extraction.py  python_instruction.py  rag_eval_qa.py  squad_qa.py
scripts/: compare_banking77.py  evaluate_rag.py  explore_docred.py  explore_py_instructions.py  run_hard_negatives.py
tessera/: __init__.py  cli.py
tessera/core/: __init__.py  base.py  config.py  exceptions.py  llm_client.py  models.py  personas.py  prompts.py
tessera/pipeline/: __init__.py  critique.py  dedup.py  generation.py  hard_negative.py  taxonomy.py
tessera/tasks/: __init__.py  classification.py  extraction.py  instruction.py  qa.py
tessera/validation/: __init__.py  benchmarks.py  evaluate.py  finetune.py
tests/: conftest.py  test_base.py  test_llm_client.py  test_models.py  test_pipeline.py  test_tasks.py
