[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera"
version = "0.1.0"
description = "Multi-task synthetic data framework for fine-tuning small LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tessera Contributors" }]
keywords = ["synthetic-data", "fine-tuning", "llm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30",
    "anthropic>=0.28",
    "pydantic>=2.7",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "datasets>=2.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
finetune = ["trl>=0.9", "transformers>=4.40", "accelerate>=0.30"]

[project.scripts]
tessera = "tessera.cli:app"

[project.urls]
Homepage = "https://github.com/muhaiminmemon/tessera"
Issues = "https://github.com/muhaiminmemon/tessera/issues"

[tool.hatch.build.targets.wheel]
packages = ["tessera"]

[tool.hatch.build.targets.wheel.force-include]
"tessera/py.typed" = "tessera/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["tessera"]
omit = ["tessera/validation/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
